trunk/Archive2/ab/4b4b2ac74d01b6/main.cpp
#include <iostream>
#include <map>

int main()
{
    std::map<int,int> data;
    auto p = data.begin();
	p = data.rbegin();
}
